# UEFILock

./: .gitignore  .gitmodules  README.md
UEFIlock/: EspDeploy.cpp  EspDeploy.vcxproj  EspDeploy.vcxproj.filters  UEFILocker.cpp  UEFIlock.sln  data.cpp  data.h  gen_data.ps1
release/: BOOTX64.EFI
run/: OVMF_VARS.fd  run-gif.cmd
run/gifboot/: infor.txt
run/gifboot/EFI/BOOT/: GRUBX64.EFI
tools/EspDeploy/: CMakeLists.txt  README.txt  UEFILocker.h  data.cpp  example.cpp
